# ovcs

./: .credo.exs  .gitignore  6_spis_hat_pinouts.txt  CLAUDE.md  CODE_STYLING.md  README.md  WIRING.md  build.sh  build_ecu.sh  build_vms.sh  burn.sh  burn_ecu.sh  cspell.config.yaml  mise.toml  ovcs  ovcs-cli  ovcs.code-workspace  package-lock.json  setup_arduino_can.sh
cli/: .gitignore  Cargo.toml  README.md  mix.exs  ovcs
cli/lib/: ovcs_cli.ex
cli/lib/ovcs_cli/: prompt.ex  shell.ex  vehicles.ex
cli/lib/ovcs_cli/commands/: build.ex  burn.ex  can.ex  clean.ex  doctor.ex  firmware.ex  run.ex  upload.ex  vehicle_new.ex  vehicles.ex
cli/src/: ansi.rs  build_runner.rs  firmware.rs  main.rs  prompt.rs  repo_root.rs  resolve_args.rs  shell.rs  ui.rs  vehicles.rs
cli/src/commands/: attach.rs  build.rs  burn.rs  can.rs  clean.rs  connect.rs  doctor.rs  mod.rs  run.rs  run_ui.rs  upload.rs  vehicle_host_keys.rs  vehicle_new.rs  vehicles.rs
cli/test/: ovcs_cli_test.exs
config/: bms_config.o2bms
controllers/: generic_controller_hat.X
docs/: README.md  applications.md  getting_started.md  hardware_architecture.md  index.md  obd2_diagnostics.md  running_hardware.md  testing_can_messages.md  testing_generic_controllers.md  vehicle_extraction_plan.md  vehicle_parameterisation.md
libraries/: .gitignore  README.md
ovcs_can_filter/: platformio.ini
ovcs_ecu/: .gitignore  README.md  mix.exs
ovcs_ecu_firmware/: README.md  mix.exs
ovcs_infotainment_backend/: .gitignore  README.md  mix.exs  setup_virtual_can.sh
ovcs_infotainment_firmware/: mix.exs
ros2/: README.md  (+4 more)
(+1529 files in other folders)
