[package]
name = "ovcs"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
description = "OVCS vehicle/firmware orchestrator"
publish = false

[[bin]]
name = "ovcs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
owo-colors = "4.1"
ratatui = "0.29"
crossterm = "0.28"
regex = "1.11"
glob = "0.3"
ansi-to-tui = "7"
russh = "0.54"
tokio = { version = "1.42", features = ["rt", "macros", "io-util", "net", "time", "sync"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
